# esp-qmk-clone

./: .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig
components/qmk/: CMakeLists.txt  README.md  qmk_build.sh
components/tinyusb_custom/: CMakeLists.txt  tusb_config.h
main/: CMakeLists.txt  hello_world_main.c  main.c
